Fixes layout bug

--- a/client/src/views/whamhunter/wham-hunter.css
+++ b/client/src/views/whamhunter/wham-hunter.css
@@ -61,8 +61,9 @@
   align-items: center;
   box-sizing: border-box;
   padding: calc(var(--spacing) * 2);
-  background-color: rgb(var(--color-wham-blue));
+  background-color: rgb(var(--color-wham-red));
   color: rgb(var(--color-text-light));
+  overflow-y: scroll;
 }
 
 .wham-hunter .loader {
@@ -85,19 +86,6 @@
   border-left: 8px solid rgb(255, 105, 180);
   border-right: 8px solid rgb(255, 105, 180);
   position: relative;
-}
-
-.wham-hunter__inner {
-  background-color: rgb(var(--color-wham-red));
-  border-radius: calc(var(--spacing) * 2);
-  padding-left: calc(var(--spacing) * 2);
-  padding-right: calc(var(--spacing) * 2);
-  padding-bottom: calc(var(--spacing));
-  box-sizing: border-box;
-  max-width: 75%;
-  box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.25);
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 .wham-hunter h2 {
